<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_point"
        android:title="@string/point"
        android:checkable="true" />

    <item
        android:id="@+id/item_line"
        android:title="@string/line"
        android:checkable="true" />

    <item
        android:id="@+id/item_rectangle"
        android:title="@string/rectangle"
        android:checkable="true" />

    <item
        android:id="@+id/item_ellipse"
        android:title="@string/ellipse"
        android:checkable="true" />

    <item
        android:id="@+id/item_segment"
        android:title="@string/segment"
        android:checkable="true" />

    <item
        android:id="@+id/item_cuboid"
        android:title="@string/cuboid"
        android:checkable="true" />
</menu>
