<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/bla1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/dialog_secondary_color">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/dialog_on_secondary_color"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/start_x"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/dialog_on_secondary_color" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/start_y"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/dialog_on_secondary_color" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/end_x"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/dialog_on_secondary_color" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="@string/end_y"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/dialog_on_secondary_color" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/table_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/table_content_height"
                android:scrollbars="vertical">

                <TableLayout
                    android:id="@+id/table_table_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/table_content_height"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/table_default_text"
                        android:textSize="20sp"
                        android:textStyle="italic" />
                </TableLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/files_dialog_bottom_view"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/dialog_secondary_color" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
