<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dialogs_width"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/dialog_secondary_color">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:gravity="center"
                    android:text="@string/enter_file_name"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:textColor="@color/dialog_on_secondary_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/dialog_primary_color" >

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/enter_file_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:inputType="textCapCharacters"
                    android:autofillHints="name"
                    android:hint="@string/default_short_file_name"
                    android:textColorLink="@color/red"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/file_extension"
                    android:textSize="20sp"
                    android:textColor="@color/dark_gray"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/dialog_secondary_color">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/files_dialog_btn_open"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/cancel"
                    android:textSize="12sp"
                    android:textColor="@color/dialog_on_secondary_btn_text_color"
                    android:background="@color/transparent" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/files_dialog_btn_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/okay"
                    android:textSize="12sp"
                    android:textColor="@color/dialog_on_secondary_btn_text_color"
                    android:background="@color/transparent" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
